--- a/templates/evaluador/evaluador.html
+++ b/templates/evaluador/evaluador.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard Evaluador</title>
-    <link rel="stylesheet" href="{{ url_for('static', path='css/evaluador/evaluador.css') }}">
+    <link rel="stylesheet" href="/static/css/evaluador.css">
 </head>
 <body>
     <div class="header">
@@ -153,4 +153,5 @@
 
     <script src="{{ url_for('static', path='js/evaluador/evaluador.js') }}"></script>
 </body>
+
 </html>
