--- a/templates/vendedor/ventas_externas.html
+++ b/templates/vendedor/ventas_externas.html
@@ -17,7 +17,7 @@
             }
         }
     </script>
-    <link rel="stylesheet" href="{{ url_for('static', path='css/ventas_externas.css') }}">
+    <link rel="stylesheet" href="css/vendedor/ventas_externas.css">
 </head>
 <body class="bg-gradient-to-br from-blue-900 via-blue-800 to-indigo-900 min-h-screen">
     <!-- Header compacto -->
@@ -351,6 +351,6 @@
         </div>
     </div>
 
-    <script src="{{ url_for('static', path='js/ventas_externas.js') }}"></script>
+    <script src="js/vendedor/ventas_externas.js"></script>
 </body>
 </html>
