--- a/templates/supervisor/supervisor.html
+++ b/templates/supervisor/supervisor.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard Supervisor - Sistema Distribución</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="{{ url_for('static', path='css/supervisor/supervisor.css') }}">
+    <link rel="stylesheet" href="/static/css/supervisor/supervisor.css">
 </head>
 <body class="bg-gray-900 text-white min-h-screen">
     <!-- Audio para notificaciones -->
@@ -250,6 +250,6 @@
         </div>
     </div>
 
-    <script src="{{ url_for('static', path='js/supervisor/supervisor.js') }}"></script>
+    <script src="/static/js/supervisor/supervisor.js"></script>
 </body>
 </html>
