--- a/templates/vendedor/ventas_externas.html
+++ b/templates/vendedor/ventas_externas.html
@@ -721,9 +721,10 @@
     </div>
 
     <!-- TTS Client -->
-    <script src="{{ url_for('static', path='/js/tts_client.js') }}"></script>
-    <script src="{{ url_for('static', path='/js/vendedor/modal_nuevo_cliente.js') }}"></script>
-    <script src="{{ url_for('static', path='/js/vendedor/ventas_externas.js') }}"></script>
+    <script src="/static/js/tts_client.js"></script>
+    <script src="/static/js/vendedor/modal_nuevo_cliente.js"></script>
+    <script src="/static/js/vendedor/ventas_externas.js"></script>
     
 </body>
+
 </html>
