--- a/templates/vendedor/ventas_externas.html
+++ b/templates/vendedor/ventas_externas.html
@@ -729,6 +729,10 @@
     <script src="/static/js/tts_client.js"></script>
     <script src="/static/js/vendedor/modal_nuevo_cliente.js"></script>
     <script src="/static/js/vendedor/ventas_externas.js"></script>
+    <script src="/static/js/vendedor/gps_tracker.js"></script> <!-- ✅ AGREGAR -->
+    
+    <!-- CSS GPS Tracker -->
+    <link rel="stylesheet" href="/static/css/vendedor/gps_tracker.css"> <!-- ✅ AGREGAR -->
     
 </body>
 </html>
